@@ -17,48 +17,15 @@
 # parent having cleared any cache variables predating this mechanism.
 # Therefore the child can rely on the config.cache generated by the
 # parent on the first run despite not finding its version stamp
-# previously saved.
+# previously saved.  In this case top-level means a configure script
+# not invoked by another configure script in its parent directory.
 
 AC_DEFUN_ONCE([NTP_CACHEVERSION], [
     AC_BEFORE([$0], [AM_INIT_AUTOMAKE])dnl
     AC_BEFORE([$0], [AM_CONFIG_HEADER])dnl
     AC_BEFORE([$0], [AC_PROG_CC])dnl
+    AC_BEFORE([$0], [AC_CONFIG_SUBDIRS])dnl
 
-    # Is this the top-level configure, or a child invoked
-    # by a parent via AC_CONFIG_SUBDIRS?  There is no 
-    # reliable general way to say, so we use a variable 
-    # NTP_CONFIGURE_PARENT set to an empty string early
-    # in our top-level configure.ac and then set to the
-    # simple flag value 'top' before AC_CONFIG_SUBDIRS.
-    # Assuming only two levels of configure.ac files,
-    # only the parent has to manage AC_CONFIG_PARENT.
-    case "${NTP_CONFIGURE_PARENT-varnotset}" in
-     '')
-	ntp_top_configure=1
-	;;
-     varnotset)
-	# without a clear indication from NTP_CONFIGURE_PARENT
-	# heuristically assume we are a child configure if our
-	# cache file path begins with ../
-	case "$cache_file" in
-	 ../*)
-	    ntp_top_configure=0
-	    AC_MSG_WARN([[ Using heuristic, guessing this configure is ]])
-	    AC_MSG_WARN([[ a child of another configure script based ]])
-	    AC_MSG_WARN([[ on cache file name starting with ../ ]])
-	    ;;
-	 *)
-	    ntp_top_configure=1
-	    AC_MSG_WARN([[ Using heuristic, guessing this configure is ]])
-	    AC_MSG_WARN([[ _not_ a child of another configure script ]])
-	    AC_MSG_WARN([[ based on cache file name not starting ]])
-	    AC_MSG_WARN([[ with ../ ]])
-	esac
-	;;
-     *)
-	ntp_top_configure=0;
-    esac
-    
     ntp_cache_flush=1
     
     case "$ntp_cv_[$1]_cache_version" in
@@ -73,8 +40,8 @@ AC_DEFUN_ONCE([NTP_CACHEVERSION], [
 	    ntp_cache_flush=0
 	    ;;
 	 *)
-	    case "$ntp_top_configure" in
-	     1)
+	    case "$NTP_CACHEVERSION_PARENT" in
+	     '')
 		# Do not clear the cache immediately after it is created
 		# empty as it is noisy.  Differentiate a newly-created 
 		# config.cache from one predating the cache version 
@@ -86,25 +53,25 @@ AC_DEFUN_ONCE([NTP_CACHEVERSION], [
 		    ntp_cache_flush=0
 		esac
 		;;
-	     0)
+	     *)
 		# Parent configure just created cache from empty,
 		# flushing would be counterproductive.
 		ntp_cache_flush=0;
-		;;
-	     *)
-	        AC_MSG_ERROR([[NTP_CACHEVERSION var ntp_top_configure misset]])
 	    esac
 	esac
 	;;
      *)
 	# configure cache version mismatches config.cache version
     esac
+    
     case "$ntp_cache_flush" in
      1)
-        # Do we flush all variables or exclude others' version stamps?
-        
-	case "$ntp_top_configure" in
-	 1)
+	c_version="${ntp_cv_[$1]_cache_version:-(no version found)}"
+	
+	# Do we flush all variables or exclude others' version stamps?
+
+	case "$NTP_CACHEVERSION_PARENT" in
+	 '')
 	    # Clear all *_cv_* variables including our child subdirs'
 	    # ntp_cv_*_cache_version variables.  This prevents subdir
 	    # configure scripts from noticing a version mismatch just
@@ -128,6 +95,7 @@ AC_DEFUN_ONCE([NTP_CACHEVERSION], [
 				   -e '/_cv_/p'
 			   `
 	esac
+	
 	for c_varname in $c_varname_list
 	do
 	    dnl use AS_UNSET([$c_varname]) eventually
@@ -139,7 +107,6 @@ AC_DEFUN_ONCE([NTP_CACHEVERSION], [
 	
 	AC_MSG_NOTICE([[$cache_file saved by another version, ignored.]])
 	AC_MSG_NOTICE([[configure script cache version: ]][$2])
-	c_version="${ntp_cv_[$1]_cache_version:-(no version found)}"
 	AC_MSG_NOTICE([[$cache_file version: $c_version]])
 	$as_unset c_version
     esac
@@ -147,6 +114,9 @@ AC_DEFUN_ONCE([NTP_CACHEVERSION], [
     # save configure version in config.cache for next time
     ntp_cv_[$1]_cache_version="[$2]"
 
-    $as_unset ntp_cache_flush ntp_top_configure
+    $as_unset ntp_cache_flush
 
+    # let any subdir configure.ac NTP_CACHEVERSION invocations
+    # know they are not the top level.
+    NTP_CACHEVERSION_PARENT='[$1]' ; export NTP_CACHEVERSION_PARENT
 ])dnl
